attempt at fix for link arrows on mobile

--- a/src/components/clink.module.css
+++ b/src/components/clink.module.css
@@ -15,7 +15,7 @@
     line-height: .4em;
     margin-left: 2px;
     font-size: 14px;
-    font-family: "IBM Plex Mono", monospace;
+    font-family: "IBM Plex Mono", monospace !important;
 }
 
 .innerLink::after{
@@ -23,5 +23,5 @@
     line-height: .4em;
     margin-left: 2px;
     font-size: 14px;
-    font-family: "IBM Plex Mono", monospace;
+    font-family: "IBM Plex Mono", monospace !important;
 }
